<resources>
    <string name="action_settings">Settings</string>
    <string name="action_add">New chat</string>
    <string name="action_accounts">Manage accounts</string>
    <string name="action_account">Manage account</string>
    <string name="action_end_conversation">Close Chat</string>
    <string name="action_leave_group">Leave Group</string>
    <string name="action_contact_details">Contact Details</string>
    <string name="action_muc_details">Group Details</string>
    <string name="channel_details">Group Details</string>
    <string name="action_secure">Secure chat</string>
    <string name="action_add_account">Add account</string>
    <string name="action_edit_contact">Edit name</string>
    <string name="action_add_phone_book">Add to phone book</string>
    <string name="action_delete_contact">Delete Contact</string>
    <string name="action_block_contact">Block contact</string>
    <string name="action_unblock_contact">Unblock contact</string>
    <string name="action_block_domain">Block domain</string>
    <string name="action_unblock_domain">Unblock domain</string>
    <string name="title_activity_manage_accounts">Manage Accounts</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_glaciervpn">Core Connection</string>
    <string name="title_activity_conference_details">Group Details</string>
    <string name="title_activity_contact_details">Contact Details</string>
    <string name="title_activity_sharewith">Share with Glacier</string>
    <string name="title_activity_start_conversation">Contacts</string>
    <string name="content_description_add_contact">Add to contacts</string>
    <string name="content_description_call">Call</string>
    <string name="content_description_backspace">Backspace</string>
    <string name="address_bar_hint"></string>
    <string name="dial_pad">Dial Pad</string>
    <string name="title_activity_choose_contact">Choose contact</string>
    <string name="title_activity_permissions_wizard">Permissions Wizard</string>
    <string name="title_activity_choose_contacts">Choose contacts</string>
    <string name="title_activity_share_via_account">Share via account</string>
    <string name="title_activity_block_list">Block list</string>
    <string name="offline">Offline</string>
    <string name="offline_statusBar">Disconnected: tap to connect</string>
    <string name="refreshing_status">Changing status to Available</string>
    <string name="refreshing_connection">Attempting to Connect</string>
    <string name="refreshing">Attempting to refresh</string>
    <string name="incoming_call">Incoming call...</string>
    <string name="outgoing_call">Ringing...</string>
    <string name="reject_call">Reject</string>
    <string name="end_call">End</string>
    <string name="accept_call">Accept</string>
    <string name="select_device">Select device</string>
    <string name="invite_contact">Add someone</string>
    <string name="change_status">Set a status</string>
    <string name="edit_status">Edit status</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="pref_general">General</string>
    <string name="pref_attachments">Attachments</string>
    <string name="pref_notification_settings">Notifications</string>
    <string name="pref_notifications">Notifications</string>
    <string name="pref_notifications_summary">Notify when a new message arrives</string>
    <string name="pref_vibrate">Vibrate</string>
    <string name="pref_vibrate_summary">Vibrate when a new message arrives</string>
    <string name="pref_led">LED Notification</string>
    <string name="pref_led_summary">Blink notification light when a new message arrives</string>
    <string name="pref_sound">Ringtone</string>
    <string name="pref_sound_summary">Play sound when a new message arrives</string>
    <string name="pref_notification_grace_period">Grace Period</string>
    <string name="pref_notification_grace_period_summary">The length of time Glacier keeps quiet after seeing activity on another device</string>
    <string name="pref_advanced_options">Advanced</string>
    <string name="pref_never_send_crash">Never send crash reports</string>
    <string name="pref_never_send_crash_summary">By sending in stack traces you are helping the ongoing development of Glacier</string>
    <string name="pref_confirm_messages">Confirm Messages</string>
    <string name="pref_confirm_messages_summary">Let your contacts know when you have received and read their messages</string>
    <string name="pref_ui_options">User Interface</string>
    <string name="encryption_choice_unencrypted">Unencrypted</string>
    <string name="encryption_choice_pgp">OpenPGP</string>
    <string name="encryption_choice_glacier">Glacier</string>
    <string name="server_info_show_more">Server info</string>
    <string name="save_as_bookmark">Save as Bookmark</string>
    <string name="delete_bookmark">Delete Bookmark</string>
    <string name="destroy_room">Destroy group chat</string>
    <string name="disable_notifications">Disable notifications</string>
    <string name="pref_security_settings">Security</string>
    <string name="pref_allow_message_correction">Allow message correction</string>
    <string name="pref_allow_message_correction_summary">Allow your contacts to retroactively edit their messages</string>
    <string name="pref_expert_options">Advanced settings</string>
    <string name="pref_expert_options_summary">Please be careful with these</string>
    <string name="pref_display_name">Display Name</string>
    <string name="pref_display_name_description">Change display name</string>
    <string name="title_pref_quiet_hours">Quiet Hours</string>
    <string name="title_pref_quiet_hours_start_time">Start time</string>
    <string name="title_pref_quiet_hours_end_time">End time</string>
    <string name="title_pref_enable_quiet_hours">Enable quiet hours</string>
    <string name="pref_quiet_hours_summary">Notifications will be silenced during quiet hours</string>
    <string name="pref_use_larger_font_summary">Use larger font sizes across the entire app</string>
    <string name="pref_expert_options_other">Other</string>
    <string name="show_qr_code">Show 2D Barcode</string>
    <string name="show_block_list">Show block list</string>
    <string name="pref_keep_foreground_service">Keep service in foreground</string>
    <string name="pref_keep_foreground_service_summary">Prevents the operating system from killing your connection</string>
    <string name="pref_show_dynamic_tags">Dynamic Tags</string>
    <string name="pref_show_dynamic_tags_summary">Display read-only tags underneath contacts</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="change_password">Change password</string>
    <string name="enable_all_accounts">Enable all accounts</string>
    <string name="disable_all_accounts">Disable all accounts</string>
    <string name="advanced_mode">Advanced mode</string>
    <string name="pref_global_message_timer">Global disappearing messages</string>
    <string name="pref_global_message_timer_description">Set 1-to-1 messages to disappear after a selected duration of time. Group messages are not affected.</string>
    <string name="pref_input_options">Input</string>
    <string name="pref_enter_is_send">Enter is send</string>
    <string name="pref_enter_is_send_summary">Use enter key to send message</string>
    <string name="pref_display_enter_key">Show enter key</string>
    <string name="pref_display_enter_key_summary">Change the emoticons key to an enter key</string>
    <string name="pref_remove_trusted_certificates_title">Remove certificates</string>
    <string name="pref_remove_trusted_certificates_summary">Delete manually approved certificates</string>
    <string name="pref_quick_action_summary">Replace send button with quick action</string>
    <string name="pref_quick_action">Quick Action</string>
    <string name="choose_quick_action">Choose quick action</string>
    <string name="pref_presence_settings">Availability</string>
    <string name="pref_away_when_screen_off">Status is Away when screen is off</string>
    <string name="pref_away_when_screen_off_summary">Automatically sets your Glacier status to Away when the screen is turned off</string>
    <string name="pref_dnd_on_silent_mode">Status is Do Not Disturb in silent/DND mode</string>
    <string name="pref_dnd_on_silent_mode_summary">Automatically sets your Glacier status to Do Not Disturb when device set to silent/DND mode</string>
    <string name="pref_treat_vibrate_as_silent">Status is Do Not Disturb in vibrate mode</string>
    <string name="pref_treat_vibrate_as_dnd_summary">Automatically sets your Glacier status to Do Not Disturb when device is on vibrate only</string>
    <string name="action_add_account_with_certificate">Add account with certificate</string>
    <string name="mam_prefs">Archiving preferences</string>
    <string name="action_renew_certificate">Renew certificate</string>
    <string name="pref_connection_options">Connection</string>
    <string name="share_uri_with">Share URI with…</string>
    <string name="pref_manually_change_presence">Manage availability manually</string>
    <string name="pref_manually_change_presence_summary">Set your availability when editing your status message.</string>
    <string name="pref_broadcast_last_activity">Broadcast Last User Interaction</string>
    <string name="pref_broadcast_last_activity_summary">Let all your contacts know when you use Glacier</string>
    <string name="pref_privacy">Privacy</string>
    <string name="pref_theme_options">Theme</string>
    <string name="pref_theme_options_summary">Select Theme</string>
    <string name="pref_delete_glacier_identities">Reset Secure Connections</string>
    <string name="pref_delete_glacier_identities_summary">Regenerate your Glacier keys. All your contacts will have to verify you again.</string>
    <string name="share_as_barcode">Share as Barcode</string>
    <string name="share_as_uri">Share as XMPP URI</string>
    <string name="share_as_http">Share as HTTP link</string>
    <string name="pref_clean_cache_summary">Clean cache folder (used by Camera Application)</string>
    <string name="pref_clean_cache">Clean cache</string>
    <string name="pref_clean_private_storage">Clean private storage</string>
    <string name="pref_clean_private_storage_summary">Clean private storage where files are kept (They can be re-downloaded from the server)</string>
    <string name="pref_automatically_delete_messages">Automatic message deletion</string>
    <string name="pref_automatically_delete_messages_description">Automatically delete messages from this device that are older than the configured time frame.</string>
    <string name="huawei_protected_apps">Protected Apps</string>
    <string name="huawei_protected_apps_summary">To keep receiving notifications, even when the screen is turned off, you need to add Glacier to the list of protected apps.</string>
    <string name="pref_scroll_to_bottom">Scroll to bottom</string>
    <string name="pref_scroll_to_bottom_summary">Scroll down after sending a message</string>
    <string name="edit_status_message">Edit status message</string>
    <string name="pref_font_size">Font Size</string>
    <string name="pref_font_size_summary">The relative font size used within the app.</string>
    <string name="pref_start_search">Direct Search</string>
    <string name="pref_start_search_summary">At ‘Start Conversation’ screen open keyboard and place cursor in search field</string>
    <string name="support_button_key">Support</string>
    <string name="support_button_summary">Report Issue or Feedback</string>
    <string name="action_enablepin">Enable PIN</string>
    <string name="action_changepin">Change PIN</string>
    <string name="action_glaciervpn">Core Connection</string>
</resources>