<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="?attr/color_background_secondary"
    android:key="main_screen">

    <PreferenceCategory
        android:key="general"
        android:title="@string/pref_general">
        <PreferenceScreen
            android:key="huawei"
            android:summary="@string/huawei_protected_apps_summary"
            android:title="@string/huawei_protected_apps"
            >
            <intent
                android:targetClass="com.huawei.systemmanager.optimize.process.ProtectActivity"
                android:targetPackage="com.huawei.systemmanager"/>
        </PreferenceScreen>
        <com.glaciersecurity.glaciermessenger.ui.AboutPreference
            android:title="@string/title_activity_about"
            android:summary="@string/pref_use_larger_font_summary"/>
        <!-- AM-16 -->
        <Preference android:title="@string/support_button_key"
            android:key="@string/support_button_key"
            android:summary="@string/support_button_summary">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://0z0g1.typeform.com/to/GA6wp3" />
        </Preference>

        <EditTextPreference
            android:key="displayname"
            android:summary="@string/pref_display_name_description"
            android:title="@string/pref_display_name"
            android:persistent="true"
            android:dialogTitle="@string/pref_display_name"
            android:dialogMessage="@string/pref_display_name_description"
            android:defaultValue="@string/displayname" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_privacy">
        <CheckBoxPreference
            android:defaultValue="@bool/confirm_messages"
            android:key="confirm_messages"
            android:summary="@string/pref_confirm_messages_summary"
            android:title="@string/pref_confirm_messages"/>
        <CheckBoxPreference
            android:defaultValue="@bool/last_activity"
            android:key="last_activity"
            android:summary="@string/pref_broadcast_last_activity_summary"
            android:title="@string/pref_broadcast_last_activity"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="security_options"
        android:title="@string/pref_security_settings">
        <ListPreference
            android:key="global_message_timer"
            android:title="@string/pref_global_message_timer"
            android:summary="@string/pref_global_message_timer_description"
            android:defaultValue="@integer/message_timer"
            android:entries="@array/timer_options_descriptions"
            android:entryValues="@array/timer_options_durations" />
        <ListPreference
            android:defaultValue="@integer/automatic_message_deletion"
            android:key="automatic_message_deletion"
            android:summary="@string/pref_automatically_delete_messages_description"
            android:title="@string/pref_automatically_delete_messages"/>
        <CheckBoxPreference
            android:defaultValue="@bool/allow_message_correction"
            android:key="allow_message_correction"
            android:summary="@string/pref_allow_message_correction_summary"
            android:title="@string/pref_allow_message_correction"/>
        <Preference
            android:key="clean_cache"
            android:summary="@string/pref_clean_cache_summary"
            android:title="@string/pref_clean_cache"/>
        <Preference
            android:key="clean_private_storage"
            android:summary="@string/pref_clean_private_storage_summary"
            android:title="@string/pref_clean_private_storage"/>
        <Preference
            android:key="delete_omemo_identities"
            android:summary="@string/pref_delete_glacier_identities_summary"
            android:title="@string/pref_delete_glacier_identities"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_notification_settings">
        <CheckBoxPreference
            android:defaultValue="@bool/show_notification"
            android:key="show_notification"
            android:summary="@string/pref_notifications_summary"
            android:title="@string/pref_notifications"/>
        <CheckBoxPreference
            android:defaultValue="@bool/vibrate_on_notification"
            android:dependency="show_notification"
            android:key="vibrate_on_notification"
            android:summary="@string/pref_vibrate_summary"
            android:title="@string/pref_vibrate"/>
        <CheckBoxPreference
            android:defaultValue="@bool/led"
            android:dependency="show_notification"
            android:key="led"
            android:summary="@string/pref_led_summary"
            android:title="@string/pref_led"/>
        <RingtonePreference
            android:defaultValue="@string/notification_ringtone"
            android:dependency="show_notification"
            android:key="notification_ringtone"
            android:ringtoneType="notification"
            android:summary="@string/pref_sound_summary"
            android:title="@string/pref_sound"/>
        <PreferenceScreen
            android:dependency="show_notification"
            android:key="quiet_hours"
            android:summary="@string/pref_quiet_hours_summary"
            android:title="@string/title_pref_quiet_hours">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="com.glaciersecurity.glaciermessenger.ui.SettingsActivity"
                android:targetPackage="@string/applicationId">
                <extra
                    android:name="page"
                    android:value="quiet_hours"/>
            </intent>
            <CheckBoxPreference
                android:defaultValue="@bool/enable_quiet_hours"
                android:key="enable_quiet_hours"
                android:summary="@string/pref_quiet_hours_summary"
                android:title="@string/title_pref_enable_quiet_hours"/>
            <com.glaciersecurity.glaciermessenger.ui.TimePreference
                android:dependency="enable_quiet_hours"
                android:key="quiet_hours_start"
                android:negativeButtonText="@string/cancel"
                android:positiveButtonText="@string/set"
                android:title="@string/title_pref_quiet_hours_start_time"/>
            <com.glaciersecurity.glaciermessenger.ui.TimePreference
                android:dependency="enable_quiet_hours"
                android:key="quiet_hours_end"
                android:negativeButtonText="@string/cancel"
                android:positiveButtonText="@string/set"
                android:title="@string/title_pref_quiet_hours_end_time"/>
        </PreferenceScreen>
        <ListPreference
            android:defaultValue="@integer/grace_period"
            android:dependency="show_notification"
            android:entries="@array/grace_periods"
            android:entryValues="@array/grace_periods_values"
            android:key="grace_period_length"
            android:summary="@string/pref_notification_grace_period_summary"
            android:title="@string/pref_notification_grace_period"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="attachments"
        android:title="@string/pref_attachments">
        <CheckBoxPreference
            android:defaultValue="@bool/return_to_previous"
            android:key="return_to_previous"
            android:summary="@string/pref_return_to_previous_summary"
            android:title="@string/pref_return_to_previous"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_ui_options">
        <ListPreference
            android:defaultValue="@string/theme"
            android:entries="@array/themes"
            android:entryValues="@array/themes_values"
            android:key="theme"
            android:summary="@string/pref_theme_options_summary"
            android:title="@string/pref_theme_options"/>
        <ListPreference
            android:defaultValue="@string/default_font_size"
            android:entries="@array/font_size_entries"
            android:entryValues="@array/font_size_entry_values"
            android:key="font_size"
            android:summary="@string/pref_font_size_summary"
            android:title="@string/pref_font_size"/>
        <ListPreference
            android:defaultValue="@string/quick_action"
            android:dialogTitle="@string/choose_quick_action"
            android:entries="@array/quick_actions"
            android:entryValues="@array/quick_action_values"
            android:key="quick_action"
            android:summary="@string/pref_quick_action_summary"
            android:title="@string/pref_quick_action"/>
        <CheckBoxPreference
            android:defaultValue="@bool/show_dynamic_tags"
            android:key="show_dynamic_tags"
            android:summary="@string/pref_show_dynamic_tags_summary"
            android:title="@string/pref_show_dynamic_tags"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="advanced"
        android:title="@string/pref_advanced_options">
        <PreferenceScreen
            android:key="expert"
            android:summary="@string/pref_expert_options_summary"
            android:title="@string/pref_expert_options">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="com.glaciersecurity.glaciermessenger.ui.SettingsActivity"
                android:targetPackage="@string/applicationId">
                <extra
                    android:name="page"
                    android:value="expert"/>
            </intent>
            <PreferenceCategory
                android:key="connection_options"
                android:title="@string/pref_connection_options">
                <Preference
                    android:key="remove_trusted_certificates"
                    android:summary="@string/pref_remove_trusted_certificates_summary"
                    android:title="@string/pref_remove_trusted_certificates_title"/>
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/pref_input_options">
                <CheckBoxPreference
                    android:defaultValue="@bool/start_searching"
                    android:key="start_searching"
                    android:summary="@string/pref_start_search_summary"
                    android:title="@string/pref_start_search"/>
                <CheckBoxPreference
                    android:defaultValue="@bool/enter_is_send"
                    android:key="enter_is_send"
                    android:summary="@string/pref_enter_is_send_summary"
                    android:title="@string/pref_enter_is_send"/>
                <CheckBoxPreference
                    android:defaultValue="@bool/display_enter_key"
                    android:key="display_enter_key"
                    android:summary="@string/pref_display_enter_key_summary"
                    android:title="@string/pref_display_enter_key"/>
                <CheckBoxPreference
                    android:defaultValue="@bool/scroll_to_bottom"
                    android:key="scroll_to_bottom"
                    android:summary="@string/pref_scroll_to_bottom_summary"
                    android:title="@string/pref_scroll_to_bottom"/>
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/pref_presence_settings">
                <CheckBoxPreference
                    android:defaultValue="@bool/manually_change_presence"
                    android:disableDependentsState="true"
                    android:key="manually_change_presence"
                    android:summary="@string/pref_manually_change_presence_summary"
                    android:title="@string/pref_manually_change_presence"/>
                <CheckBoxPreference
                    android:defaultValue="@bool/away_when_screen_off"
                    android:dependency="manually_change_presence"
                    android:key="away_when_screen_off"
                    android:summary="@string/pref_away_when_screen_off_summary"
                    android:title="@string/pref_away_when_screen_off"/>
                <CheckBoxPreference
                    android:defaultValue="@bool/dnd_on_silent_mode"
                    android:dependency="manually_change_presence"
                    android:key="dnd_on_silent_mode"
                    android:summary="@string/pref_dnd_on_silent_mode_summary"
                    android:title="@string/pref_dnd_on_silent_mode"/>
                <CheckBoxPreference
                    android:defaultValue="@bool/treat_vibrate_as_silent"
                    android:dependency="dnd_on_silent_mode"
                    android:key="treat_vibrate_as_silent"
                    android:summary="@string/pref_treat_vibrate_as_dnd_summary"
                    android:title="@string/pref_treat_vibrate_as_silent"/>
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/pref_expert_options_other">
                <CheckBoxPreference
                    android:defaultValue="@bool/enable_foreground_service"
                    android:key="enable_foreground_service"
                    android:summary="@string/pref_keep_foreground_service_summary"
                    android:title="@string/pref_keep_foreground_service"/>
                <Preference
                    android:key="export_logs"
                    android:summary="@string/pref_export_logs_summary"
                    android:title="@string/pref_export_logs"/>
            </PreferenceCategory>
        </PreferenceScreen>

        <CheckBoxPreference
            android:defaultValue="@bool/never_send"
            android:key="never_send"
            android:summary="@string/pref_never_send_crash_summary"
            android:title="@string/pref_never_send_crash"/>
    </PreferenceCategory>
    <com.glaciersecurity.glaciermessenger.ui.AboutPreference
        android:summary="@string/pref_about_conversations_summary"
        android:title="@string/title_activity_about"/>
</PreferenceScreen>
