<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_glaciervpn"
        android:orderInCategory="50"
        android:showAsAction="never"
        android:title="@string/action_glaciervpn"/>
    <item
        android:id="@+id/action_change_presence"
        android:icon="@drawable/ic_announcement_white_24dp"
        app:showAsAction="always"
        android:orderInCategory="80"
        android:title="@string/edit_status_message"/>

    <item
        android:id="@+id/action_share"
        android:icon="?attr/icon_share"
        app:showAsAction="always"
        android:orderInCategory="90"
        android:title="@string/share_uri_with">
        <menu>
            <item
                android:id="@+id/action_share_uri"
                android:title="@string/share_as_uri"/>
            <item
                android:id="@+id/action_share_http"
                android:title="@string/share_as_http"/>
            <item
                android:id="@+id/action_share_barcode"
                android:title="@string/share_as_barcode"/>
            <item
                android:id="@+id/action_show_qr_code"
                android:title="@string/show_qr_code"
                android:visible="false"/>
        </menu>
    </item>

    <item
        android:id="@+id/action_show_block_list"
        app:showAsAction="never"
        android:orderInCategory="95"
        android:visible="false"
        android:title="@string/show_block_list"/>

    <item
        android:orderInCategory="100"
        android:id="@+id/action_renew_certificate"
        app:showAsAction="never"
        android:title="@string/action_renew_certificate"
        android:visible="false"/>

    <item
        android:id="@+id/action_server_info_show_more"
        android:checkable="true"
        android:checked="false"
        app:showAsAction="never"
        android:orderInCategory="100"
        android:title="@string/server_info_show_more"/>

    <item
        android:id="@+id/action_mam_prefs"
        android:orderInCategory="105"
        android:title="@string/mam_prefs"/>

    <item
        android:id="@+id/action_change_password_on_server"
        app:showAsAction="never"
        android:orderInCategory="110"
        android:title="@string/change_password"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="115"
        app:showAsAction="never"
        android:title="@string/action_settings"/>
</menu>