<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_security"
        android:icon="?attr/icon_not_secure"
        android:orderInCategory="20"
        android:visible="false"
        app:showAsAction="always"
        android:title="@string/action_secure">
        <menu>
            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/encryption_choice_none"
                    android:title="@string/encryption_choice_unencrypted"/>
                <item
                    android:id="@+id/encryption_choice_axolotl"
                    android:title="@string/encryption_choice_glacier"/>
                <item
                    android:id="@+id/encryption_choice_pgp"
                    android:title="@string/encryption_choice_pgp"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_call"
        android:icon="@drawable/ic_call"
        android:orderInCategory="100"
        android:title="Call"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_change_status"
        android:orderInCategory="35"
        app:showAsAction="never"
        android:title="@string/change_status"/>
    <item
        android:id="@+id/action_edit_status"
        android:orderInCategory="35"
        app:showAsAction="never"
        android:title="@string/edit_status"/>
    <item
        android:id="@+id/action_invite"
        android:orderInCategory="45"
        app:showAsAction="never"
        android:title="@string/invite_contact"
        android:visible="false"/>
    <item
        android:id="@+id/action_end_conversation"
        android:orderInCategory="60"
        app:showAsAction="never"
        android:title="@string/action_end_conversation"/>
    <item
        android:id="@+id/action_leave_group"
        android:orderInCategory="61"
        android:showAsAction="never"
        android:title="@string/action_leave_group"/>
    <item
        android:id="@+id/action_mute"
        android:orderInCategory="70"
        app:showAsAction="never"
        android:title="@string/disable_notifications"/>
    <item
        android:id="@+id/action_unmute"
        android:orderInCategory="71"
        app:showAsAction="never"
        android:title="@string/enable_notifications"/>
</menu>