<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/action_add_account"
		android:icon="?attr/icon_add_person"
		app:showAsAction="always"
		android:orderInCategory="100"
		android:title="@string/action_add_account"/>
	<item
		android:id="@+id/action_add_account_with_cert"
		app:showAsAction="never"
		android:icon="?attr/icon_add_person"
		android:orderInCategory="100"
		android:title="@string/action_add_account_with_certificate"
		android:visible="false"/>
	<item
		android:id="@+id/action_enable_all"
		android:orderInCategory="100"
		android:title="@string/enable_all_accounts"/>
	<item
		android:id="@+id/action_disable_all"
		android:orderInCategory="100"
		android:title="@string/disable_all_accounts"/>
	<item
		android:id="@+id/action_settings"
		android:orderInCategory="100"
		app:showAsAction="never"
		android:title="@string/action_settings"/>

	<!-- PIN -->
	<item
		android:id="@+id/action_enablepin"
		android:checkable="true"
		android:checked="false"
		android:orderInCategory="110"
		android:showAsAction="never"
		android:title="@string/action_enablepin" />
	<item
		android:id="@+id/action_changepin"
		android:orderInCategory="120"
		android:showAsAction="never"
		android:title="@string/action_changepin" />
	<item
		android:id="@+id/action_glaciervpn"
		android:orderInCategory="10"
		android:showAsAction="never"
		android:title="@string/action_glaciervpn"/>
</menu>