<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit_contact"
        android:icon="?attr/icon_edit"
        android:orderInCategory="50"
        app:showAsAction="always"
        android:title="@string/action_edit_contact"/>

    <item
        android:id="@+id/action_block"
        android:orderInCategory="72"
        app:showAsAction="never"
        android:visible="false"
        android:title="@string/action_block_contact"/>

    <item
        android:id="@+id/action_unblock"
        android:orderInCategory="73"
        app:showAsAction="never"
        android:visible="false"
        android:title="@string/action_unblock_contact"/>

    <!--<item-->
        <!--android:id="@+id/action_accounts"-->
        <!--android:orderInCategory="90"-->
        <!--app:showAsAction="never"-->
        <!--android:title="@string/action_accounts"/>-->
    <!--<item-->
        <!--android:id="@+id/action_account"-->
        <!--android:orderInCategory="90"-->
        <!--app:showAsAction="never"-->
        <!--android:title="@string/action_account"/>-->
    <!--<item-->
        <!--android:id="@+id/action_settings"-->
        <!--android:orderInCategory="100"-->
        <!--app:showAsAction="never"-->
        <!--android:title="@string/action_settings"/>-->
    <!--<item-->
        <!--android:id="@+id/action_glaciervpn"-->
        <!--android:orderInCategory="10"-->
        <!--android:showAsAction="never"-->
        <!--android:title="@string/action_glaciervpn"/>-->
</menu>